--- a/package.json
+++ b/package.json
@@ -15,5 +15,22 @@
   "bugs": {
     "url": "https://github.com/913-RichardOrr/caliber-backend/issues"
   },
-  "homepage": "https://github.com/913-RichardOrr/caliber-backend#readme"
+  "homepage": "https://github.com/913-RichardOrr/caliber-backend#readme",
+  "devDependencies": {
+    "@babel/core": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "@babel/preset-typescript": "^7.12.13",
+    "@types/cors": "^2.8.9",
+    "@types/jest": "^26.0.20",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
+    "typescript": "^4.1.5"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "http-errors": "^1.8.0",
+    "log4js": "^6.3.0",
+    "pg": "^8.5.1"
+  }
 }
