--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-typescript": "^7.12.13",
     "@types/cors": "^2.8.9",
     "@types/jest": "^26.0.20",
+    "@types/pg": "^7.14.9",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "typescript": "^4.1.5"
