--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,23 @@
   "bugs": {
     "url": "https://github.com/913-RichardOrr/caliber-backend/issues"
   },
-  "homepage": "https://github.com/913-RichardOrr/caliber-backend#readme"
+  "homepage": "https://github.com/913-RichardOrr/caliber-backend#readme",
+  "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.12.11",
+    "@types/cors": "^2.8.9",
+    "@types/jest": "^26.0.20",
+    "@types/pg": "^7.14.9",
+    "jest": "^26.6.3",
+    "typescript": "^4.1.5",
+    "babel-jest": "^26.6.3",
+    "@babel/preset-typescript": "^7.12.16"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "http-errors": "^1.8.0",
+    "log4js": "^6.3.0",
+    "pg": "^8.5.1"
+  }
 }
