--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "docker": "^1.0.0",
     "dotenv": "^8.2.0",
     "http-errors": "^1.8.0",
     "log4js": "^6.3.0",
