--- a/cloudFormation/rds.yaml
+++ b/cloudFormation/rds.yaml
@@ -1,60 +1,65 @@
-Type: AWS::RDS::DBInstance
-Properties: 
-  AllocatedStorage: String
-  AllowMajorVersionUpgrade: Boolean
-  AssociatedRoles: 
-    - DBInstanceRole
-  AutoMinorVersionUpgrade: Boolean
-  AvailabilityZone: String
-  BackupRetentionPeriod: Integer
-  CACertificateIdentifier: String
-  CharacterSetName: String
-  CopyTagsToSnapshot: Boolean
-  DBClusterIdentifier: String
-  DBInstanceClass: String
-  DBInstanceIdentifier: String
-  DBName: String
-  DBParameterGroupName: String
-  DBSecurityGroups: 
-    - String
-  DBSnapshotIdentifier: String
-  DBSubnetGroupName: String
-  DeleteAutomatedBackups: Boolean
-  DeletionProtection: Boolean
-  Domain: String
-  DomainIAMRoleName: String
-  EnableCloudwatchLogsExports: 
-    - String
-  EnableIAMDatabaseAuthentication: Boolean
-  EnablePerformanceInsights: Boolean
-  Engine: String
-  EngineVersion: String
-  Iops: Integer
-  KmsKeyId: String
-  LicenseModel: String
-  MasterUsername: String
-  MasterUserPassword: String
-  MaxAllocatedStorage: Integer
-  MonitoringInterval: Integer
-  MonitoringRoleArn: String
-  MultiAZ: Boolean
-  OptionGroupName: String
-  PerformanceInsightsKMSKeyId: String
-  PerformanceInsightsRetentionPeriod: Integer
-  Port: String
-  PreferredBackupWindow: String
-  PreferredMaintenanceWindow: String
-  ProcessorFeatures: 
-    - ProcessorFeature
-  PromotionTier: Integer
-  PubliclyAccessible: Boolean
-  SourceDBInstanceIdentifier: String
-  SourceRegion: String
-  StorageEncrypted: Boolean
-  StorageType: String
-  Tags: 
-    - Tag
-  Timezone: String
-  UseDefaultProcessorFeatures: Boolean
-  VPCSecurityGroups: 
-    - String
+AWSTemplateFormatVersion: 2010-09-09
+Description: >-
+  Description": "AWS CloudFormation Sample Template for creating an Amazon RDS DB instance: 
+  Sample template showing how to create a DB instance with Enhanced Monitoring enabled. 
+  **WARNING** This template creates an RDS DB instance. You will be billed for the AWS 
+  resources used if you create a stack from this template.
+Parameters:
+  DBInstanceID:
+    Default: calibermobile
+    Description: Instance for Caliber Mobile RDS to track QC feedback
+    Type: String
+    MinLength: '1'
+    MaxLength: '63'
+    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
+    ConstraintDescription: >-
+      Must begin with a letter and must not end with a hyphen or contain two
+      consecutive hyphens.
+  DBName:
+    Default: calibermobile
+    Description: Database for Caliber Mobile to track QC feedback
+    Type: String
+    MinLength: '1'
+    MaxLength: '64'
+    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
+    ConstraintDescription: Must begin with a letter and contain only alphanumeric characters.
+  DBInstanceClass:
+    Default: db.t3.micro
+    Description: DB instance class
+    Type: String
+    ConstraintDescription: Must select a valid DB instance type.
+  DBAllocatedStorage:
+    Default: '20'
+    Description: The size of the database (GiB)
+    Type: Number
+    MinValue: '5'
+    MaxValue: '1024'
+    ConstraintDescription: must be between 20 and 65536 GiB.
+  DBUsername:
+    NoEcho: 'true'
+    Description: Username for postgreSQL database access
+    Type: String
+    MinLength: '1'
+    MaxLength: '16'
+    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
+    ConstraintDescription: must begin with a letter and contain only alphanumeric characters.
+  DBPassword:
+    NoEcho: 'true'
+    Description: Password postgreSQL database access
+    Type: String
+    MinLength: '8'
+    MaxLength: '41'
+    AllowedPattern: '[a-zA-Z0-9]*'
+    ConstraintDescription: must contain only alphanumeric characters.
+Resources:
+  MyDB:
+    Type: 'AWS::RDS::DBInstance'
+    Properties:
+      DBInstanceIdentifier: !Ref DBInstanceID
+      DBName: !Ref DBName
+      DBInstanceClass: !Ref DBInstanceClass
+      AllocatedStorage: !Ref DBAllocatedStorage
+      Engine: postgres
+      EngineVersion: 12.4
+      MasterUsername: username
+      MasterUserPassword: revature
