changes to template

--- a/cloudFormation/rds.yaml
+++ b/cloudFormation/rds.yaml
@@ -63,3 +63,7 @@ Resources:
       EngineVersion: 12.4
       MasterUsername: temp
       MasterUserPassword: temp
+Outputs:
+  Endpoint:
+    Description: Generated endpoint address for database connection
+    Value: !GetAtt Database.Endpoint.Address
