--- a/batches/cloudFormation/batches.yaml
+++ b/batches/cloudFormation/batches.yaml
@@ -1,10 +1,22 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Resources:
+  BatchLayer:
+    Type: AWS::Lambda::LayerVersion
+    Properties:
+      CompatibleRuntimes:
+        - nodejs14.x
+      Content:
+        S3Bucket: caliber-batches
+        S3Key: BatchesLayersCode
+      Description: BatchesLayersCode
+      LayerName: batches-layers
   Batches:
     Type: AWS::Lambda::Function
     Properties:
       FunctionName: Batches
       Handler: lambda/index.handler
+      Layers:
+        - !Ref BatchLayer
       Role:
         Fn::GetAtt:
           - BatchesRole
@@ -12,7 +24,7 @@ Resources:
       Code:
         S3Bucket: caliber-batches
         S3Key: BatchesCode
-      Runtime: nodejs12.x
+      Runtime: nodejs14.x
       Timeout: 300
   BatchesRole:
     Type: 'AWS::IAM::Role'
