the dockerfile now builds correctly

--- a/batches/docker/Dockerfile
+++ b/batches/docker/Dockerfile
@@ -3,6 +3,7 @@ FROM public.ecr.aws/lambda/nodejs:14
 RUN pwd
 COPY ["batches/*.ts", "batches/axios/nodejs/package.json", "tsconfig.json", "/var/task/"]
 RUN npm install
+RUN npm install typescript @types/node
 RUN npx tsc
 RUN ls
 CMD ["index.handler"]
