--- a/associateLambda/Dockerfile
+++ b/associateLambda/Dockerfile
@@ -3,7 +3,7 @@ FROM public.ecr.aws/lambda/nodejs:12
 # also available from amazon/aws-lambda-nodejs:12 on docker hub
 
 # The Lambda base image expects your code to be placed in the /var/task/ folder
-COPY *.ts ../package.json ../tsconfig.json /var/task/
+COPY ../package.json ../tsconfig.json *.ts /var/task/
 
 #ENV: will need details for accessing database
 
