--- a/cloudFormation/rds.yaml
+++ b/cloudFormation/rds.yaml
@@ -7,9 +7,9 @@ Parameters:
     Default: calibermobile
     Description: Instance for Caliber Mobile RDS to track QC feedback
     Type: String
-    MinLength: '1'
-    MaxLength: '63'
-    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
+    MinLength: "1"
+    MaxLength: "63"
+    AllowedPattern: "[a-zA-Z][a-zA-Z0-9]*"
     ConstraintDescription: >-
       Must begin with a letter and must not end with a hyphen or contain two
       consecutive hyphens.
@@ -17,9 +17,9 @@ Parameters:
     Default: calibermobile
     Description: Database for Caliber Mobile to track QC feedback
     Type: String
-    MinLength: '1'
-    MaxLength: '64'
-    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
+    MinLength: "1"
+    MaxLength: "64"
+    AllowedPattern: "[a-zA-Z][a-zA-Z0-9]*"
     ConstraintDescription: Must begin with a letter and contain only alphanumeric characters.
   DBInstanceClass:
     Default: db.t3.micro
@@ -27,32 +27,32 @@ Parameters:
     Type: String
     ConstraintDescription: Must select a valid DB instance type.
   DBAllocatedStorage:
-    Default: '20'
+    Default: "20"
     Description: The size of the database (GiB)
     Type: Number
-    MinValue: '5'
-    MaxValue: '1024'
+    MinValue: "5"
+    MaxValue: "1024"
     ConstraintDescription: must be between 20 and 65536 GiB.
   DBUsername:
-    NoEcho: 'true'
+    NoEcho: "true"
     Description: Username for postgreSQL database access
     Type: String
-    MinLength: '1'
-    MaxLength: '16'
-    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
+    MinLength: "1"
+    MaxLength: "16"
+    AllowedPattern: "[a-zA-Z][a-zA-Z0-9]*"
     ConstraintDescription: must begin with a letter and contain only alphanumeric characters.
   DBPassword:
-    NoEcho: 'true'
+    NoEcho: "true"
     Description: Password postgreSQL database access
     Type: String
-    MinLength: '8'
-    MaxLength: '41'
-    AllowedPattern: '[a-zA-Z0-9]*'
-    ConstraintDescription: must contain only alphanumeric characters.
+    MinLength: "8"
+    MaxLength: "41"
+    AllowedPattern: "[a-zA-Z0-9]*"
+    ConstraintDescription: must contain only alphanumeric characters and be longer than 8 characters.
 
 Resources:
   MyDB:
-    Type: 'AWS::RDS::DBInstance'
+    Type: "AWS::RDS::DBInstance"
     Properties:
       DBInstanceIdentifier: !Ref DBInstanceID
       DBName: !Ref DBName
@@ -62,13 +62,12 @@ Resources:
       EngineVersion: 12.4
       MasterUsername: !Ref DBUsername
       MasterUserPassword: !Ref DBPassword
+    DeletionPolicy:
+      Delete
       #This creates the security group to allow us to access the database in DBeaver.
   SecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: This Security Group allows us to connect to the RDS instance of the database above.
       GroupName: rdsSecurityGroup
-Outputs:
-  Endpoint:
-    Description: Generated endpoint address for database connection
-    Value: !GetAtt MyDB.Endpoint.Address
+    DeletionPolicy: Delete
