--- a/cloudFormation/gateway.yaml
+++ b/cloudFormation/gateway.yaml
@@ -119,8 +119,6 @@ Resources:
   # GET method for /categories
   getCategoriesMethod:
     Type: AWS::ApiGateway::Method
-    DependsOn:
-      - categoriesLambda
     Properties:
       AuthorizationType: NONE
       HttpMethod: GET
@@ -129,7 +127,7 @@ Resources:
         IntegrationHttpMethod: POST
         Uri: !Sub
           - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-          - lambdaArn: !GetAtt categoriesLambda.Arn
+          - lambdaArn: arn:aws:lambda:us-east-1:640280721521:function:categoriesLambda
       ResourceId: !Ref categoriesResource
       RestApiId: !Ref apiGateway
   # POST method for /categories
