--- a/cloudFormation/lambda.yaml
+++ b/cloudFormation/lambda.yaml
@@ -1,25 +1,25 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description:
+Description: This is the categoriesLambda funtion test stack
 Resources:
-  # Lambda function
-  categoriesLambdaFunction:
+  categoriesLambda:
     Type: AWS::Lambda::Function
-      Properties: 
-        Code: 
-          ImageUri: String
-        Description: lambda function for GETting POSTing and PUTing categories
-        FunctionName: !Ref categoriesLambda
-        Handler: categoriesLambda.handler
-        PackageType: Image
-        Role: arn:aws:iam::855430746673:role/caliber-mobile-cf
-        Runtime: nodejs14.x
-        VpcConfig:
-          # TO-DO:
-          SecurityGroupIds:
-            - String
-          SubnetIds:
-            - String
-  # Create our log group
-  lambdaLogGroup:
+    Properties:
+      Code:
+        ImageUri: 640280721521.dkr.ecr.us-east-1.amazonaws.com/categories-lambda:latest
+      Description: lambda function for GETting POSTing and PUTing categories
+      FunctionName: categoriesLambda
+      PackageType: Image
+      Role: #????
+      VpcConfig:
+        SecurityGroupIds: 
+          - sg-67ed824f
+        SubnetIds:
+          - subnet-75cb6738
+          - subnet-956972bb
+          - subnet-206eb92e
+          - subnet-4b052575
+          - subnet-31ddc056
+          - subnet-65a2bc39
 Outputs:
-  LAMBDAFUNCTIONArn:
+  categoriesLambdaArn:
+    Value: !GetAtt categoriesLambda.Arn
