--- a/batches/docker/Dockerfile
+++ b/batches/docker/Dockerfile
@@ -1,10 +1,9 @@
 # Retrieiving a public image from Amazon's Elastic Container Registry
 FROM public.ecr.aws/lambda/nodejs:14
 RUN pwd
-COPY ["batches/axios/nodejs/package.json", "tsconfig.json", "/var/task/"]
+COPY ["tsconfig.json", "/var/task/"]
 COPY ["batches/getBatchesLambda.ts", "/var/task/index.ts"]
-RUN npm install
-RUN npm install typescript @types/node
+RUN npm init -y
+RUN npm install axios typescript @types/node
 RUN npx tsc
-RUN ls
-CMD ["build/index.handler"]
+CMD ["index.handler"]
