--- a/associateLambda/Dockerfile
+++ b/associateLambda/Dockerfile
@@ -1,7 +1,7 @@
 # Run this Dockerfile from the caliber-backend directory
 # using the command:
 # docker build -t associatelambda -f associateLambda/Dockerfile
-#      --build-arg PGUSER=<username> PGHOST=<host> PGPASSWORD=<password> PGDATABASE=<database> .
+#      --build-arg USER=<username> --build-arg HOST=<host> --build-arg PASSWORD=<password> --build-arg DATABASE=<database> .
 
 # Retrieiving a public image from Amazon's Elastic Container Registry
 FROM public.ecr.aws/lambda/nodejs:12
@@ -11,16 +11,22 @@ FROM public.ecr.aws/lambda/nodejs:12
 COPY package.json tsconfig.json /var/task/
 COPY ./associateLambda/*.ts /var/task/
 
-ENV PGUSER=${PGUSER}
-ENV PGHOST=${PGHOST}
-ENV PGPASSWORD=${PGPASSWORD}
-ENV PGDATABASE=${PGDATABASE}
-ENV PGPORT=5432
-
 # Install npm dependencies
 RUN npm install
 # Transpile
 RUN npx tsc
+
+# ENV variables for accessing database
+ARG USER
+ARG HOST
+ARG PASSWORD
+ARG DATABASE
+
+ENV PGUSER=${USER}
+ENV PGHOST=${HOST}
+ENV PGPASSWORD=${PASSWORD}
+ENV PGDATABASE=${DATABASE}
+ENV PGPORT=5432
 
 # check to see my file exists
 RUN ls
