--- a/associateLambda/associateLambda.yaml
+++ b/associateLambda/associateLambda.yaml
@@ -8,15 +8,15 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       Code:
-        ImageUri: !Join [".",[!Sub "${AWS::AccountId}", "dkr", "ecr", !Sub "${AWS::Region}", "amazonaws", "com", "/", !Ref RepoName]]
+        ImageUri: !Join [".",[!Sub "${AWS::AccountId}", "dkr", "ecr", !Sub "${AWS::Region}", "amazonaws", "com", "/associate-lambda"]]
       Role: arn:aws:iam::855430746673:role/caliber-mobile-cf
       Runtime: nodejs12.x
-      VpcConfig:
-        SecurityGroupIds:
-          - sg-67ed824f
-        SubnetIds:
-          - subnet-75cb6738
-          - subnet-956972bb
+# VpcConfig:
+#   SecurityGroupIds:
+#     - sg-67ed824f
+#   SubnetIds:
+#     - subnet-75cb6738
+#     - subnet-956972bb
 # Outputs:
 #   AssociateECRArn:
 #     Value: !GetAtt AssociateECR.Arn
