--- a/cloudFormation/gateway.yaml
+++ b/cloudFormation/gateway.yaml
@@ -306,22 +306,6 @@ Resources:
           method.response.header.Access-Control-Allow-Headers: false
           method.response.header.Access-Control-Allow-Methods: false
           method.response.header.Access-Control-Allow-Origin: false
-  # GET method for qc/batches/{batchId}
-  getBatchMethod:
-    Type: AWS::ApiGateway::Method
-    DependsOn:
-      - # batch lambda
-    Properties:
-      AuthorizationType: NONE
-      HttpMethod: GET
-      Integration:
-        Type: AWS_PROXY
-        IntegrationHttpMethod: POST
-        Uri: !Sub
-          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-          - lambdaArn: !GetAtt # batch lambda arn
-      ResourceId: !Ref qcBatchResource
-      RestApiId: !Ref apiGateway
   # API Gateway Resource - /qc/batches/{batchId}/weeks
   qcWeeksResource:
     Type: AWS::ApiGateway::Resource
@@ -360,6 +344,22 @@ Resources:
           method.response.header.Access-Control-Allow-Headers: false
           method.response.header.Access-Control-Allow-Methods: false
           method.response.header.Access-Control-Allow-Origin: false
+  # GET method for /qc/batches/{batchId}/weeks
+  getWeeksMethod:
+    Type: AWS::ApiGateway::Method
+    DependsOn:
+      - # qc weeks lambda
+    Properties:
+      AuthorizationType: NONE
+      HttpMethod: GET
+      Integration:
+        Type: AWS_PROXY
+        IntegrationHttpMethod: POST
+        Uri: !Sub
+          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
+          - lambdaArn: !GetAtt # qc week lambda arn
+      ResourceId: !Ref qcWeeksResource
+      RestApiId: !Ref apiGateway
   # POST method for /qc/batches/{batchId}/weeks
   addWeekMethod:
     Type: AWS::ApiGateway::Method
@@ -414,22 +414,6 @@ Resources:
           method.response.header.Access-Control-Allow-Headers: false
           method.response.header.Access-Control-Allow-Methods: false
           method.response.header.Access-Control-Allow-Origin: false
-  # GET method for qc/batches/{batchId}/weeks/{week}
-  getWeekInfoMethod:
-    Type: AWS::ApiGateway::Method
-    DependsOn:
-      - # qc week lambda
-    Properties:
-      AuthorizationType: NONE
-      HttpMethod: GET
-      Integration:
-        Type: AWS_PROXY
-        IntegrationHttpMethod: POST
-        Uri: !Sub
-          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations
-          - lambdaArn: !GetAtt # qc week lambda arn
-      ResourceId: !Ref qcWeekResource
-      RestApiId: !Ref apiGateway
   # POST method for qc/batches/{batchId}/weeks/{week}
   addWeekNoteMethod:
     Type: AWS::ApiGateway::Method
