--- a/cloudFormation/ecr.yaml
+++ b/cloudFormation/ecr.yaml
@@ -27,10 +27,16 @@ Resources:
       RepositoryName: "batches-lambda"
       LifecyclePolicy:
         LifecyclePolicyText: !Ref PolicyTemplate
-  AssociateECR:
+  AssociatesECR:
     Type: AWS::ECR::Repository
     Properties:
-      RepositoryName: "associate-lambda"
+      RepositoryName: "associates-lambda"
+      LifecyclePolicy:
+        LifecyclePolicyText: !Ref PolicyTemplate
+  BatchAssociatesECR:
+    Type: AWS::ECR::Repository
+    Properties:
+      RepositoryName: "batch-associates-lambda"
       LifecyclePolicy:
         LifecyclePolicyText: !Ref PolicyTemplate
   BatchWeekECR:
@@ -62,8 +68,12 @@ Outputs:
     Value: !GetAtt BatchesECR.Arn
     Export:
       Name: BatchesECRArn
-  AssociateECRArn:
-    Value: !GetAtt AssociateECR.Arn
+  AssociatesECRArn:
+    Value: !GetAtt AssociatesECR.Arn
+    Export:
+      Name: AssociatesECRArn
+  BatchAssociatesECRArn:
+    Value: !GetAtt BatchAssociatesECR.Arn
     Export:
       Name: AssociateECRArn
   BatchWeekECRArn:
