--- a/batches/docker/Dockerfile
+++ b/batches/docker/Dockerfile
@@ -2,6 +2,10 @@
 FROM public.ecr.aws/lambda/nodejs:14
 RUN pwd
 COPY ["tsconfig.json", "batches/*.ts", "/var/task/"]
+COPY ["response.ts", "/var/task/"]
+
+# change ../response to ./response
+RUN sed -i 's/..\/response/.\/response/' /var/task/index.ts
 RUN npm init -y
 RUN npm install axios typescript @types/node
 RUN npx tsc
