--- a/associateLambda/associateLambda.yaml
+++ b/associateLambda/associateLambda.yaml
@@ -6,8 +6,7 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       Code:
-        ImageUri: !Join ["/",[!Join [".",[!Sub "${AWS::AccountId}", "dkr", "ecr", !Sub "${AWS::Region}", "amazonaws", "com"]], "associatelambda:latest"]]
-      Role: arn:aws:iam::169748077841:role/service-role/getApprovedBooks-role-635ptj5r
-      # Role: arn:aws:iam::855430746673:role/caliber-mobile-cf
-      FunctionName: "assoc"
+        ImageUri: !Join ["/",[!Join [".",[!Sub "${AWS::AccountId}", "dkr", "ecr", !Sub "${AWS::Region}", "amazonaws", "com"]], "associates-lambda:latest"]]
+      Role: arn:aws:iam::855430746673:role/caliber-mobile-cf
+      FunctionName: "associate"
       PackageType: "Image"
