--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cors": "^2.8.5",
+    "docker": "^1.0.0",
     "dotenv": "^8.2.0",
     "http-errors": "^1.8.0",
     "log4js": "^6.3.0",
