--- a/batchAssociatesLambda/batchAssociatesLambda.yaml
+++ b/batchAssociatesLambda/batchAssociatesLambda.yaml
@@ -7,7 +7,6 @@ Resources:
     Properties:
       Code:
         ImageUri: !Join ["/",[!Join [".",[!Sub "${AWS::AccountId}", "dkr", "ecr", !Sub "${AWS::Region}", "amazonaws", "com"]], "associatelambda:latest"]]
-      Role: arn:aws:iam::169748077841:role/service-role/getApprovedBooks-role-635ptj5r
-      # Role: arn:aws:iam::855430746673:role/caliber-mobile-cf
-      FunctionName: "assoc"
+      Role: arn:aws:iam::855430746673:role/caliber-mobile-cf
+      FunctionName: "batchAssociates"
       PackageType: "Image"
