--- a/WeekCategories/cloudFormation/qcweekCaetgories.yaml
+++ b/WeekCategories/cloudFormation/qcweekCaetgories.yaml
@@ -1,62 +1,13 @@
-AWSTemplateFormatVersion: '2010-09-09'
+# Make the associate lambda from an existingimage
+AWSTemplateFormatVersion: 2010-09-09
+Description: lambda for weekCategories lambda
 Resources:
-  WeekCategoriesLayer:
-    Type: AWS::Lambda::LayerVersion
-    Properties:
-      CompatibleRuntimes:
-        - nodejs14.x
-      Content:
-        #S3Bucket: caliber-mobilr-p3 # need to update this to S3 bucket holding the lambdas
-        #S3Key: WeekCategoriesLayersCode # need to update this to key for the file holding layers zip file
-      Description: WeekCategoriesLayersCode
-      LayerName: WeekCategories-layers
-  WeekCategories:
+  weekCategoriesLambda:
     Type: AWS::Lambda::Function
     Properties:
-      FunctionName: WeekCategories
-      Handler: lambda/index.handler
-      Layers:
-        - !Ref WeekCategoriesLayer
-      Role:
-        Fn::GetAtt:
-          - WeekCategoriesRole
-          - Arn
       Code:
-        #S3Bucket: caliber-WeekCategories # need to update this to S3 bucket holding the lambdas
-        #S3Key: WeekCategoriesCode # need to update this to key for the file holding lambda zip file
-      Runtime: nodejs14.x
-      Timeout: 5
-  WeekCategoriesRole:
-    Type: 'AWS::IAM::Role'
-    Properties:
-      RoleName: WeekCategoriesRole
-      AssumeRolePolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service:
-                - lambda.amazonaws.com
-            Action:
-              - 'sts:AssumeRole'
-      Path: /
-      Policies:
-        - PolicyName: AWSLambdaBasicExecutionRole
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              - Effect: Allow
-                Action:
-                  - 'logs:CreateLogGroup'
-                  - 'logs:CreateLogStream'
-                  - 'logs:PutLogEvents'
-                Resource: '*'
-        - PolicyName: AmazonS3FullAccess
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              - Effect: Allow
-                Action: 's3:*'
-                Resource:
-                  - 'arn:aws:s3:::exchange-data-raw'
-                  - 'arn:aws:s3:::exchange-data-raw/*'
+        ImageUri: !Join ["/",[!Join [".",[!Sub "${AWS::AccountId}", "dkr", "ecr", !Sub "${AWS::Region}", "amazonaws", "com"]], "weekcategories:latest"]]
+      Role: arn:aws:iam::169748077841:role/service-role/getApprovedBooks-role-635ptj5r
+      # Role: arn:aws:iam::855430746673:role/caliber-mobile-cf
+      FunctionName: "handler"
+      PackageType: "Image"
