--- a/authorizer/Dockerfile
+++ b/authorizer/Dockerfile
@@ -1,18 +1,15 @@
-# Run this Dockerfile from the caliber-backend directory
-# using the command:
-# docker build -t associatelambda -f associateLambda/Dockerfile
-#      --build-arg PGUSER=<username> PGHOST=<host> PGPASSWORD=<password> PGDATABASE=<database> .
+#run this file in authorizer folder
 
 # Retrieiving a public image from Amazon's Elastic Container Registry
 FROM public.ecr.aws/lambda/nodejs:12
 # also available from amazon/aws-lambda-nodejs:12 on docker hub
 
 # The Lambda base image expects your code to be placed in the /var/task/ folder
-COPY tsconfig.json ./authorizer/*.ts ./authorizer/*.json /var/task/
+COPY tsconfig.json helper.ts authorizer.ts firebase-service-account-DO_NOT_PUSH.json /var/task/
 
 # Install npm dependencies
 RUN npm init -y
-RUN npm install firebase-admin
+RUN npm install firebase-admin typescript
 # Transpile
 RUN npx tsc
 
@@ -21,3 +18,4 @@ RUN ls
 
 # Tell lambda what to call
 CMD ["authorizer.handler"]
+
